# hackathon-II-phase-V-advanced-cloud-deployment

./: .dockerignore  .env.example  .gitignore  .helmignore  ARCHITECTURE.md  AUTH_FIX_SUMMARY.md  CLAUDE.md  COMPLETE_FIX_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FINAL_STEPS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  MCP_TOOLS_IMPLEMENTATION_SUMMARY.md  MVP_IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_8_COMPLETION_SUMMARY.md  PHASE_9_COMPLETION_SUMMARY.md  README.md  RESTART_AND_TEST.sh  SUMMARY.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS_SUMMARY.md  package.json  port-forward.sh  requirements-agent.txt  setup.py  start-tunnels.sh  validate_implementation.py  verify-setup.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  minimal.Dockerfile  pyproject.toml  requirements.txt  test_server.py
backend/alembic/: env.py
backend/alembic/versions/: 1656465b3a69_add_priority_column_to_tasks_table.py  a854b7a35228_add_phase_v_advanced_features_tags_due_.py  de25f85aaa58_add_container_images_table.py  ea37b4bccadf_initial_migration_with_corrected_data_.py
backend/docs/: api.md  events.md
backend/src/: database.py  main.py  test_simple.py
backend/src/api/: ai_deploy.py  auth.py  chat.py  chat_endpoint.py  chat_router.py  container_images.py  conversations.py  deployments.py  health.py  helm_charts.py  mcp_tools.py  metrics.py  minikube_clusters.py  reminders.py  services.py  tasks.py  (+1 more)
backend/tests/: test_security_scanner.py
(+539 files in other folders)
