[tool.poetry]
name = "todo-ai-chatbot-mcp-tools"
version = "0.1.0"
description = "MCP tools for AI-driven task management in Todo AI Chatbot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
sqlmodel = "^0.0.16"
pydantic = "^2.5.0"
psycopg2-binary = "^2.9.9"
neon = "^0.1.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
httpx = "^0.25.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]